# additional-endpoint-in-python-app

./: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
logs/: logs.txt
service/: service.py
service/api/: api_app.py  routes.py
service/kafka/: kafka_consumer.py
service/utils/: logs.py
